# KGraph

./: CMakeLists.txt  README.md
apps/: kgraph-deepwalk.C  kgraph-ppr.C  kgraph-ssr-dense.C  kgraph-ssr-sparse.C  kgraph-sssp-dense.C  kgraph-sssp-sparse.C  kgraph-sswp-dense.C  kgraph-sswp-sparse.C
ligra/: IO.h  heapLLU.h  ligra.h  time.hpp  utils.h
